// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. tile a 1`] = `
<Link>
  <View
    style={
      Object {
        "marginHorizontal": 10,
        "marginTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 35,
          "fontWeight": "900",
          "lineHeight": 35,
          "marginBottom": 10,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags />
  </View>
  <Image
    style={
      Object {
        "width": "100%",
      }
    }
  />
</Link>
`;

exports[`2. tile b 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingBottom": 25,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 25,
          "fontWeight": "900",
          "lineHeight": 25,
          "marginBottom": 5,
        }
      }
    >
      This is tile headline
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "flexWrap": "wrap",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 14,
          "lineHeight": 20,
          "marginBottom": 10,
        }
      }
    >
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`3. tile c 1`] = `
<Link>
  <View
    style={
      Object {
        "marginBottom": 10,
        "width": "100%",
      }
    }
  >
    <Image />
  </View>
  <View
    style={
      Object {
        "paddingBottom": 25,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "900",
          "lineHeight": 22,
          "marginBottom": 5,
          "paddingBottom": 5,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`4. tile d 1`] = `
<Link>
  <Image
    style={
      Object {
        "paddingRight": 10,
        "width": "50%",
      }
    }
  />
  <View
    style={
      Object {
        "paddingBottom": 5,
        "paddingRight": 10,
        "width": "50%",
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "900",
          "lineHeight": 22,
          "marginBottom": 10,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`5. tile e 1`] = `
<Link>
  <Image
    style={
      Object {
        "paddingRight": 10,
        "width": "50%",
      }
    }
  />
  <View
    style={
      Object {
        "paddingBottom": 5,
        "paddingRight": 10,
        "width": "50%",
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "900",
          "lineHeight": 22,
          "marginBottom": 5,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`6. tile f 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingBottom": 25,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 35,
          "fontWeight": "900",
          "lineHeight": 35,
          "marginBottom": 5,
        }
      }
    >
      This is tile headline
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "fontFamily": "TimesModern-Regular",
          "fontSize": 19,
          "lineHeight": 21,
          "paddingBottom": 10,
        }
      }
    >
      Three Conservative MPs resign
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "flexWrap": "wrap",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 14,
          "lineHeight": 20,
          "marginBottom": 10,
        }
      }
    >
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`7. tile g 1`] = `
<Link>
  <Image
    style={
      Object {
        "overflow": "hidden",
        "width": "30%",
      }
    }
  />
  <View
    style={
      Object {
        "justifyContent": "center",
        "paddingBottom": 25,
        "paddingHorizontal": 10,
        "paddingTop": 5,
        "width": "70%",
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "900",
          "lineHeight": 22,
          "marginBottom": 5,
          "paddingBottom": 5,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`8. tile h 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingBottom": 25,
        "paddingRight": 10,
        "paddingVertical": 10,
        "width": "50%",
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "900",
          "lineHeight": 22,
          "marginBottom": 10,
        }
      }
    >
      This is tile headline
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "flexWrap": "wrap",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 14,
          "lineHeight": 20,
          "marginBottom": 10,
        }
      }
    >
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
    <ArticleFlags />
    <Text>
      <Text
        style={
          Object {
            "color": "#333333",
            "flexDirection": "row",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 13,
            "lineHeight": 15,
          }
        }
      >
        Richard Lloyd Parry
      </Text>
      <Text
        style={
          Object {
            "color": "#333333",
            "flexDirection": "row",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 13,
            "lineHeight": 15,
          }
        }
      >
        , Hanoi
      </Text>
    </Text>
  </View>
  <Image
    style={
      Object {
        "flexDirection": "column",
        "justifyContent": "flex-end",
        "paddingTop": 10,
        "width": "50%",
      }
    }
  />
</Link>
`;

exports[`9. tile i 1`] = `
<Link>
  <Image
    style={
      Object {
        "width": "100%",
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F0F0F0",
        "paddingBottom": 15,
        "paddingHorizontal": 40,
        "paddingTop": 20,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 35,
          "fontWeight": "900",
          "lineHeight": 35,
          "marginBottom": 10,
          "textAlign": "center",
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`10. tile j 1`] = `
<Link>
  <Image
    style={
      Object {
        "width": "40%",
      }
    }
  />
  <View
    style={
      Object {
        "paddingBottom": 25,
        "paddingHorizontal": 10,
        "width": "60%",
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "900",
          "lineHeight": 22,
          "marginBottom": 10,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`11. tile k 1`] = `
<Link>
  <Image
    style={
      Object {
        "paddingRight": 10,
        "width": "50%",
      }
    }
  />
  <View
    style={
      Object {
        "paddingBottom": 25,
        "width": "50%",
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 18,
          "fontWeight": "900",
          "lineHeight": 18,
          "marginBottom": 10,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`12. tile l 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingBottom": 25,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 20,
          "fontWeight": "900",
          "lineHeight": 20,
          "marginBottom": 10,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`13. tile m 1`] = `
<Link>
  <View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "900",
          "lineHeight": 22,
          "marginBottom": 5,
          "marginTop": 20,
          "textAlign": "center",
        }
      }
    >
      Driving Off
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "fontFamily": "TimesDigitalW04-Regular",
          "fontSize": 14,
          "lineHeight": 20,
          "paddingBottom": 10,
          "paddingHorizontal": 40,
          "textAlign": "center",
        }
      }
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`14. tile n 1`] = `
<Link>
  <Image
    style={
      Object {
        "width": "50%",
      }
    }
  />
  <View
    style={
      Object {
        "paddingBottom": 25,
        "paddingHorizontal": 10,
        "width": "50%",
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 30,
          "fontWeight": "900",
          "lineHeight": 33,
          "marginBottom": 5,
        }
      }
    >
      This is tile headline
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "fontFamily": "TimesModern-Regular",
          "fontSize": 19,
          "lineHeight": 21,
          "paddingBottom": 10,
        }
      }
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`15. tile o 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingBottom": 25,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "900",
          "lineHeight": 22,
          "marginBottom": 11,
          "marginTop": 5,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`16. tile p 1`] = `
<Link>
  <Image
    style={
      Object {
        "overflow": "hidden",
        "width": "30%",
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "paddingTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 35,
          "fontWeight": "900",
          "lineHeight": 35,
          "marginBottom": 5,
          "paddingHorizontal": 10,
          "textAlign": "center",
        }
      }
    >
      This is tile headline
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "fontFamily": "TimesModern-Regular",
          "fontSize": 14,
          "lineHeight": 20,
          "paddingBottom": 10,
          "paddingHorizontal": 40,
          "textAlign": "center",
        }
      }
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags />
    <Text>
      <Text
        style={
          Object {
            "color": "#850029",
            "flexDirection": "row",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 12,
            "letterSpacing": 0.6,
            "lineHeight": 12,
          }
        }
      >
        Richard Lloyd Parry
      </Text>
      <Text
        style={
          Object {
            "color": "#850029",
            "flexDirection": "row",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 12,
            "letterSpacing": 0.6,
            "lineHeight": 12,
          }
        }
      >
        , Hanoi
      </Text>
    </Text>
  </View>
</Link>
`;

exports[`17. tile q 1`] = `
<Link>
  <Image
    style={
      Object {
        "marginBottom": 10,
        "width": "100%",
      }
    }
  />
</Link>
`;

exports[`18. tile r 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingBottom": 25,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 40,
          "fontWeight": "900",
          "lineHeight": 40,
          "marginBottom": 5,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags />
  </View>
  <Image />
</Link>
`;

exports[`19. tile s 1`] = `
<View
  style={
    Object {
      "paddingBottom": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#1D1D1B",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "marginBottom": 15,
        }
      }
    >
      Nature notes
    </Text>
  </View>
  <Text
    style={
      Object {
        "color": "#696969",
        "fontFamily": "TimesDigitalW04-Regular",
        "fontSize": 14,
        "lineHeight": 20,
      }
    }
  >
    <Text>
      <Text
        style={
          Object {
            "color": "#1D1D1B",
            "fontWeight": "bold",
          }
        }
      >
        Rick Astley
      </Text>
      , singer-songwriter, 
      <Text
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Never Gonna Give You Up 
      </Text>
      (1987), 53; 
      <Text
        style={
          Object {
            "color": "#1D1D1B",
            "fontWeight": "bold",
          }
        }
      >
        Mike Batt
      </Text>
      , composer, songwriter, 
      <Text
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Wombling Free 
      </Text>
      (1978), 
      <Text
        style={
          Object {
            "fontStyle": "italic",
          }
        }
      >
        Bright Eyes 
      </Text>
    </Text>
  </Text>
  <Text
    style={
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 12,
        "marginTop": 10,
      }
    }
  >
    <Text>
      Libby Purves
    </Text>
  </Text>
</View>
`;

exports[`20. tile t 1`] = `
<Link>
  <Image
    style={
      Object {
        "width": "50%",
      }
    }
  />
  <View
    style={
      Object {
        "paddingBottom": 25,
        "paddingHorizontal": 10,
        "paddingVertical": 5,
        "width": "50%",
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "900",
          "lineHeight": 22,
          "marginBottom": 5,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`21. tile u 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingBottom": 5,
        "width": "40%",
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 35,
          "fontWeight": "900",
          "lineHeight": 35,
          "marginBottom": 5,
          "paddingVertical": 5,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags />
  </View>
  <Image
    style={
      Object {
        "width": "60%",
      }
    }
  />
</Link>
`;

exports[`22. tile v 1`] = `
<Link>
  <Image
    style={
      Object {
        "marginBottom": 10,
        "width": "100%",
      }
    }
  />
  <View
    style={
      Object {
        "paddingBottom": 25,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 30,
          "fontWeight": "900",
          "lineHeight": 30,
          "marginBottom": 5,
          "paddingBottom": 5,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`23. tile w 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingBottom": 5,
        "paddingRight": 20,
        "width": "33.33%",
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 35,
          "fontWeight": "900",
          "lineHeight": 35,
          "marginBottom": 5,
        }
      }
    >
      This is tile headline
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "flexWrap": "wrap",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 14,
          "lineHeight": 20,
          "marginBottom": 10,
        }
      }
    >
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
    <ArticleFlags />
  </View>
  <Image
    style={
      Object {
        "width": "66.66%",
      }
    }
  />
</Link>
`;

exports[`24. tile x 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingBottom": 25,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 40,
          "fontWeight": "900",
          "lineHeight": 40,
          "marginBottom": 5,
        }
      }
    >
      This is tile headline
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "fontFamily": "TimesDigitalW04-Regular",
          "fontSize": 25,
          "lineHeight": 25,
          "paddingBottom": 5,
        }
      }
    >
      Three Conservative MPs resign
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "flexWrap": "wrap",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 14,
          "lineHeight": 20,
          "marginBottom": 10,
        }
      }
    >
      <Text>
        
        ‘The prodigal son returns.” So read a banner tied to the wall of the Paul Strank Stand at Kingsmeadow, the home of AFC Wimbledon, on Saturday, alongside the sepia-toned image of a fresh-faced Wally Downes, sporting an 80s haircut and Wimbledon strip, with a mischievous glint in his eye.
        ...
      </Text>
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`25. tile y 1`] = `
<Link>
  <View>
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 30,
          "fontWeight": "900",
          "lineHeight": 30,
          "marginBottom": 5,
        }
      }
    >
      This is tile headline
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "flexWrap": "wrap",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 14,
          "lineHeight": 20,
          "marginBottom": 10,
        }
      }
    >
      <Text>
        
        ‘The prodigal son returns.” So read a banner tied to the wall of the Paul Strank Stand at Kingsmeadow, the home of AFC Wimbledon, on Saturday, alongside the sepia-toned image of a fresh-faced Wally Downes, sporting an 80s haircut and Wimbledon strip, with a mischievous glint in his eye.
        ...
      </Text>
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`26. tile z 1`] = `
<Link>
  <View>
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 25,
          "fontWeight": "900",
          "lineHeight": 25,
          "marginBottom": 10,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags />
  </View>
  <Image />
</Link>
`;

exports[`27. tile aa 1`] = `
<Link>
  <Image
    style={
      Object {
        "paddingBottom": 5,
      }
    }
  />
  <View
    style={
      Object {
        "paddingBottom": 25,
        "paddingVertical": 5,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 30,
          "fontWeight": "900",
          "lineHeight": 30,
          "marginBottom": 5,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`28. tile ab 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingBottom": 25,
        "paddingRight": 10,
        "paddingVertical": 10,
        "width": "50%",
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 30,
          "fontWeight": "900",
          "lineHeight": 30,
          "marginBottom": 5,
        }
      }
    >
      This is tile headline
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "flexWrap": "wrap",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 14,
          "lineHeight": 20,
          "marginBottom": 10,
        }
      }
    >
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
    <ArticleFlags />
    <Text>
      <Text
        style={
          Object {
            "color": "#333333",
            "flexDirection": "row",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 13,
            "lineHeight": 15,
          }
        }
      >
        Richard Lloyd Parry
      </Text>
      <Text
        style={
          Object {
            "color": "#333333",
            "flexDirection": "row",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 13,
            "lineHeight": 15,
          }
        }
      >
        , Hanoi
      </Text>
    </Text>
  </View>
  <Image
    style={
      Object {
        "flexDirection": "column",
        "justifyContent": "flex-end",
        "paddingTop": 10,
        "width": "50%",
      }
    }
  />
</Link>
`;

exports[`29. tile ae 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingBottom": 25,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 30,
          "fontWeight": "900",
          "lineHeight": 30,
          "marginBottom": 5,
        }
      }
    >
      This is tile headline
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "flexWrap": "wrap",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 14,
          "lineHeight": 20,
          "marginBottom": 10,
        }
      }
    >
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`30. tile ag 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingBottom": 25,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 30,
          "fontWeight": "900",
          "lineHeight": 30,
          "marginBottom": 5,
          "marginTop": 20,
          "textAlign": "center",
        }
      }
    >
      Driving Off
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "fontFamily": "TimesDigitalW04-Regular",
          "fontSize": 14,
          "lineHeight": 20,
          "paddingBottom": 10,
          "textAlign": "center",
        }
      }
    >
      Three Conservative MPs resign
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`31. tile aj 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingHorizontal": 15,
        "paddingTop": 15,
        "width": "85%",
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 25,
          "fontWeight": "900",
          "lineHeight": 25,
          "marginBottom": 5,
        }
      }
    >
      Times Concise medium No 7881
    </Text>
  </View>
  <Image
    style={
      Object {
        "alignSelf": "flex-end",
        "width": "85%",
      }
    }
  />
</Link>
`;

exports[`32. tile ak 1`] = `
<Link>
  <View
    style={
      Object {
        "height": 80,
        "paddingHorizontal": 10,
        "paddingTop": 10,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "900",
          "lineHeight": 22,
          "marginBottom": 5,
        }
      }
    >
      Times Concise medium No 7881
    </Text>
  </View>
  <Image
    style={
      Object {
        "alignSelf": "flex-end",
        "marginTop": -25,
        "width": "85%",
      }
    }
  />
</Link>
`;

exports[`33. tile al 1`] = `
<Link>
  <Image
    style={
      Object {
        "paddingVertical": 10,
        "width": "100%",
      }
    }
  />
  <View
    style={
      Object {
        "paddingBottom": 25,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "900",
          "lineHeight": 27,
          "marginBottom": 0,
        }
      }
    >
      This is tile headline
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "flexWrap": "wrap",
          "fontFamily": "TimesDigitalW04-Regular",
          "fontSize": 14,
          "lineHeight": undefined,
          "marginBottom": 10,
          "width": "100%",
        }
      }
    >
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`34. tile am 1`] = `
<Link>
  <Image
    style={
      Object {
        "marginBottom": 10,
        "width": "100%",
      }
    }
  />
  <View
    style={
      Object {
        "paddingBottom": 25,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 35,
          "fontWeight": "900",
          "lineHeight": 35,
          "marginBottom": 5,
          "paddingBottom": 5,
        }
      }
    >
      This is tile headline
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "flexWrap": "wrap",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 14,
          "lineHeight": 20,
          "marginBottom": 10,
        }
      }
    >
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`35. tile an 1`] = `
<Link>
  <Image
    style={
      Object {
        "overflow": "hidden",
      }
    }
  />
  <View
    style={
      Object {
        "justifyContent": "center",
        "paddingBottom": 25,
        "paddingHorizontal": 10,
        "paddingTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "900",
          "lineHeight": 22,
          "marginBottom": 5,
        }
      }
    >
      This is tile headline
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "flexWrap": "wrap",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 14,
          "lineHeight": 20,
          "marginBottom": 10,
        }
      }
    >
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`36. tile ap 1`] = `
<Link>
  <Image
    style={
      Object {
        "overflow": "hidden",
      }
    }
  />
  <View
    style={
      Object {
        "justifyContent": "center",
        "paddingBottom": 25,
        "paddingHorizontal": 10,
        "paddingTop": 5,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "900",
          "lineHeight": 22,
          "marginBottom": 5,
          "paddingBottom": 5,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`37. tile ad 1`] = `
<Link>
  <Image
    style={
      Object {
        "width": "30%",
      }
    }
  />
  <View
    style={
      Object {
        "paddingBottom": 25,
        "paddingHorizontal": 10,
        "width": "70%",
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 20,
          "fontWeight": "900",
          "lineHeight": 20,
          "marginBottom": 5,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`38. tile ac 1`] = `
<Link>
  <Image
    style={
      Object {
        "width": "100%",
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F0F0F0",
        "flex": 1,
        "justifyContent": "center",
        "paddingBottom": 25,
        "paddingHorizontal": 40,
        "paddingVertical": 20,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 30,
          "fontWeight": "900",
          "lineHeight": 30,
          "marginBottom": 10,
          "textAlign": "center",
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`39. tile aq 1`] = `
<Link>
  <View
    style={
      Object {
        "marginBottom": 10,
        "width": "100%",
      }
    }
  >
    <Image />
  </View>
  <View
    style={
      Object {
        "paddingBottom": 25,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "900",
          "lineHeight": 22,
          "marginBottom": 5,
        }
      }
    >
      This is tile headline
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "flexWrap": "wrap",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 14,
          "lineHeight": 20,
          "marginBottom": 10,
        }
      }
    >
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
    <ArticleFlags />
  </View>
</Link>
`;

exports[`tiles that change logic based on breakpoints TileW with teaser for wider screens 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingBottom": 5,
        "paddingRight": 20,
        "width": "33.33%",
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 35,
          "fontWeight": "900",
          "lineHeight": 35,
          "marginBottom": 5,
        }
      }
    >
      This is tile headline
    </Text>
    <Text
      style={
        Object {
          "color": "#696969",
          "flexWrap": "wrap",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 14,
          "lineHeight": 20,
          "marginBottom": 10,
        }
      }
    >
      <Text>
        
        Theresa May has two objectives tomorrow when MPs get to vote on Brexit — the trouble is both are fraught with difficulty.
        ...
      </Text>
    </Text>
    <ArticleFlags />
  </View>
  <Image
    style={
      Object {
        "width": "66.66%",
      }
    }
  />
</Link>
`;

exports[`tiles that change logic based on breakpoints TileW without teaser for tablet 1`] = `
<Link>
  <View
    style={
      Object {
        "paddingBottom": 5,
        "paddingRight": 20,
        "width": "33.33%",
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <ArticleLabel />
    </View>
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 35,
          "fontWeight": "900",
          "lineHeight": 35,
          "marginBottom": 5,
        }
      }
    >
      This is tile headline
    </Text>
    <ArticleFlags />
  </View>
  <Image
    style={
      Object {
        "width": "66.66%",
      }
    }
  />
</Link>
`;
